--- a/recording.conf
+++ b/recording.conf
@@ -1,1 +1,2 @@
-{"magic_number":"986860809","items":[{"process":100,"audio":"audio1986860809.m4a","prefix":"","video":"video1986860809.mp4"}]}
+{"magic_number":"986860809","items":[{"process":100,"audio":"audio1986860809.m4a","prefix":"","video":"video
+1986860809.mp4"}]}
